// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react-router-4 import-specifier: import-specifier 1`] = `
"import React from 'react';
import {Route, IndexRoute, Redirect, IndexRedirect} from 'react-router';
import FourOhFour from './not-found';
import {AppContainer} from '../containers/app-container';

export default (
  <Route component={AppContainer} path=\\"prefix\\">
    <Route path=\\"counter\\" component={CounterContainer} />
    <Route path=\\"/counter\\" component={CounterContainer} />
    <Route path={getThing()} component={CounterContainer} />
    <Route path=\\"test\\" component={Test}>
      <Route path=\\"LOL\\" component={Other} />
    </Route>
    <Route path=\\"*\\" component={FourOhFour} statusCode={404} />
  </Route>
);


      ↓ ↓ ↓ ↓ ↓ ↓

import React from 'react';
import {Route, IndexRoute, Redirect, IndexRedirect} from 'react-router';
import FourOhFour from './not-found';
import {withRouter} from 'fusion-plugin-react-router';
import {AppContainer} from '../containers/app-container';
export default (
  <Route
    path=\\"/prefix\\"
    render={_props => {
      return (
        <AppContainer {..._props}>
          <Switch>
            <Route
              path={_props.match.path + '/counter'}
              component={CounterContainer}
              exact
            />
            <Route
              path={_props.match.path + '/counter'}
              component={CounterContainer}
              exact
            />
            <Route
              path={_props.match.path + getThing()}
              component={CounterContainer}
              exact
            />
            <Route
              path={_props.match.path + '/test'}
              render={_props2 => {
                return (
                  <Test {..._props2}>
                    <Switch>
                      <Route
                        path={_props2.match.path + '/LOL'}
                        component={Other}
                        exact
                      />
                    </Switch>
                  </Test>
                );
              }}
              exact
            />
            <Route
              path={_props.match.path + '/*'}
              component={FourOhFour}
              statusCode={404}
              exact
            />
          </Switch>
        </AppContainer>
      );
    }}
    exact
  />
);
"
`;

exports[`react-router-4 no-prefix: no-prefix 1`] = `
"import React from 'react';
import {Route, IndexRoute, Redirect, IndexRedirect} from 'react-router';
import FourOhFour from './not-found';
import AppContainer from '../containers/app-container';

export default (
  <Route component={AppContainer} path=\\"/\\">
    <Route path=\\"counter\\" component={CounterContainer} />
    <Route path=\\"/counter\\" component={CounterContainer} />
    <Route path={getThing()} component={CounterContainer} />
    <Route path=\\"test\\" component={Test}>
      <Route path=\\"LOL\\" component={Other} />
    </Route>
    <Route path=\\"*\\" component={FourOhFour} statusCode={404} />
  </Route>
);


      ↓ ↓ ↓ ↓ ↓ ↓

import React from 'react';
import {Route, IndexRoute, Redirect, IndexRedirect} from 'react-router';
import FourOhFour from './not-found';
import {withRouter} from 'fusion-plugin-react-router';

const _AppContainer = withRouter(AppContainer);

import AppContainer from '../containers/app-container';
export default (
  <_AppContainer
    match={{
      params: {},
    }}
  >
    <Switch>
      <Route path=\\"/counter\\" component={CounterContainer} exact />
      <Route path=\\"/counter\\" component={CounterContainer} exact />
      <Route path={getThing()} component={CounterContainer} exact />
      <Route
        path=\\"/test\\"
        render={_props => {
          return (
            <Test {..._props}>
              <Switch>
                <Route
                  path={_props.match.path + '/LOL'}
                  component={Other}
                  exact
                />
              </Switch>
            </Test>
          );
        }}
        exact
      />
      <Route path=\\"/*\\" component={FourOhFour} statusCode={404} exact />
    </Switch>
  </_AppContainer>
);
"
`;

exports[`react-router-4 no-prefix-expression: no-prefix-expression 1`] = `
"import React from 'react';
import {Route, IndexRoute, Redirect, IndexRedirect} from 'react-router';
import FourOhFour from './not-found';
import AppContainer from '../containers/app-container';

export default (
  <Route component={AppContainer} path={'/'}>
    <Route path=\\"counter\\" component={CounterContainer} />
    <Route path=\\"/counter\\" component={CounterContainer} />
    <Route path={getThing()} component={CounterContainer} />
    <Route path=\\"test\\" component={Test}>
      <Route path=\\"LOL\\" component={Other} />
    </Route>
    <Route path=\\"*\\" component={FourOhFour} statusCode={404} />
  </Route>
);


      ↓ ↓ ↓ ↓ ↓ ↓

import React from 'react';
import {Route, IndexRoute, Redirect, IndexRedirect} from 'react-router';
import FourOhFour from './not-found';
import {withRouter} from 'fusion-plugin-react-router';

const _AppContainer = withRouter(AppContainer);

import AppContainer from '../containers/app-container';
export default (
  <_AppContainer
    match={{
      params: {},
    }}
  >
    <Switch>
      <Route path=\\"/counter\\" component={CounterContainer} exact />
      <Route path=\\"/counter\\" component={CounterContainer} exact />
      <Route path={getThing()} component={CounterContainer} exact />
      <Route
        path=\\"/test\\"
        render={_props => {
          return (
            <Test {..._props}>
              <Switch>
                <Route
                  path={_props.match.path + '/LOL'}
                  component={Other}
                  exact
                />
              </Switch>
            </Test>
          );
        }}
        exact
      />
      <Route path=\\"/*\\" component={FourOhFour} statusCode={404} exact />
    </Switch>
  </_AppContainer>
);
"
`;

exports[`react-router-4 positive-match: positive-match 1`] = `
"import React from 'react';
import {Route, IndexRoute, Redirect, IndexRedirect} from 'react-router';
import FourOhFour from './not-found';
import AppContainer from '../containers/app-container';

export default (
  <Route component={AppContainer} path=\\"prefix\\">
    <Route path=\\"counter\\" component={CounterContainer} />
    <Route path=\\"/counter\\" component={CounterContainer} />
    <Route path={getThing()} component={CounterContainer} />
    <Route path=\\"test\\" component={Test}>
      <Route path=\\"LOL\\" component={Other} />
    </Route>
    <Route path=\\"*\\" component={FourOhFour} statusCode={404} />
  </Route>
);


      ↓ ↓ ↓ ↓ ↓ ↓

import React from 'react';
import {Route, IndexRoute, Redirect, IndexRedirect} from 'react-router';
import FourOhFour from './not-found';
import {withRouter} from 'fusion-plugin-react-router';

const _AppContainer = withRouter(AppContainer);

import AppContainer from '../containers/app-container';
export default (
  <Route
    path=\\"/prefix\\"
    render={_props => {
      return (
        <_AppContainer {..._props}>
          <Switch>
            <Route
              path={_props.match.path + '/counter'}
              component={CounterContainer}
              exact
            />
            <Route
              path={_props.match.path + '/counter'}
              component={CounterContainer}
              exact
            />
            <Route
              path={_props.match.path + getThing()}
              component={CounterContainer}
              exact
            />
            <Route
              path={_props.match.path + '/test'}
              render={_props2 => {
                return (
                  <Test {..._props2}>
                    <Switch>
                      <Route
                        path={_props2.match.path + '/LOL'}
                        component={Other}
                        exact
                      />
                    </Switch>
                  </Test>
                );
              }}
              exact
            />
            <Route
              path={_props.match.path + '/*'}
              component={FourOhFour}
              statusCode={404}
              exact
            />
          </Switch>
        </_AppContainer>
      );
    }}
    exact
  />
);
"
`;
